--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
         padding: 20px;
         display: flex;
         justify-content: center;
-        align-items: start;
-        min-height: 100vh;
-        flex-direction: column;
       }
 
       @media (max-width: 480px) {
@@ -23,16 +20,6 @@
         .card {
           padding: 15px;
           width: 100%;
-        }
-        input, select, textarea {
-          font-size: 16px;
-        }
-        .price-summary.sticky {
-          position: sticky;
-          bottom: 0;
-          left: 0;
-          right: 0;
-          z-index: 999;
         }
       }
 
@@ -45,8 +32,6 @@
         max-width: 420px;
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         animation: fadeIn 0.5s ease;
-        margin: auto;
-        display: none;
       }
 
       @keyframes fadeIn {
@@ -56,21 +41,17 @@
 
       #landingPage {
         text-align: center;
-        color: #fff;
+        color: white;
         max-width: 420px;
         margin: auto;
         padding: 20px;
-      }
-
-      #landingPage p {
-        font-size: 1.2em;
-        margin-top: 10px;
+        display: block;
       }
 
       #startButton {
         margin-top: 20px;
         padding: 12px 24px;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: bold;
         background-color: #e84545;
         color: white;
@@ -83,198 +64,30 @@
         background-color: #cc3c3c;
       }
 
-      #perkDisplay ul {
-        margin-top: 10px;
-        padding-left: 20px;
-      }
-
-      #perkDisplay ul li {
-        margin-bottom: 8px;
-      }
-
-      label {
-        font-weight: 600;
-        font-size: 0.85em;
-        display: block;
-        margin: 10px 0 4px;
-      }
-
-      input, select, textarea {
-        width: 100%;
-        padding: 10px 12px;
-        font-size: 14px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        margin-bottom: 15px;
-        box-sizing: border-box;
-      }
-
-      button[type="submit"] {
-        background-color: #e84545;
-        border: none;
-        border-radius: 8px;
-        width: 100%;
-        padding: 12px;
-        font-size: 16px;
-        font-weight: bold;
-        color: white;
-        cursor: pointer;
-      }
-
-      button[type="submit"]:hover {
-        background-color: #cc3c3c;
+      #formCard {
+        display: none;
       }
     </style>
   </head>
   <body>
     <div id="landingPage">
       <h2>👋 Welcome to MV Digital Tools</h2>
-      <p>Are you ready to save up to 90% on Subscription services? 🚀</p>
-      <button id="startButton">Yes</button>
+      <p>Helping students stay under the radar since 2023 🚀</p>
+      <button id="startButton">Let's Get Started</button>
     </div>
 
     <div class="card" id="formCard">
-      <h2>📝 Subscription Request</h2>
-      <p>Fill the form to subscribe. You'll receive payment instructions via email.</p>
-
-      <form id="customerForm">
-        <label>👤 Full Name</label>
-        <input type="text" name="name" required>
-
-        <label>📞 Contact Number</label>
-        <input type="tel" name="contact" required>
-
-        <label>📧 Email Address</label>
-        <input type="email" name="email" required>
-
-        <label>🛠️ Request Type</label>
-        <select name="requestType" required>
-          <option value="new">New Subscription</option>
-          <option value="renew">Renew Existing</option>
-        </select>
-
-        <label>🧩 Service</label>
-        <select name="service" id="service" required>
-          <option value="ChatGPT">ChatGPT</option>
-          <option value="Microsoft 365">Microsoft 365</option>
-          <option value="Canva Pro">Canva Pro</option>
-          <option value="Duolingo">Duolingo</option>
-          <option value="Assignment Check">Assignment Check</option>
-          <option value="Perplexity">Perplexity</option>
-          <option value="Amazon Prime Video">Amazon Prime Video</option>
-          <option value="Adobe Creative Cloud">Adobe Creative Cloud</option>
-        </select>
-
-        <div id="perkDisplay">
-          <strong>What do you get:</strong>
-        </div>
-
-        <label>⏳ Duration</label>
-        <select name="duration" required>
-          <option>1 Month</option>
-          <option>6 Months</option>
-          <option>1 Year</option>
-        </select>
-
-        <label>🗒️ Notes / Ref</label>
-        <textarea name="notes" rows="3" placeholder="Optional..."></textarea>
-
-        <button type="submit">Submit</button>
-      </form>
+      <iframe 
+        src="https://script.google.com/macros/s/AKfycbxCrSLSIC6aPjiXitNlKfDEg5K8FfIAqnM0T-zJM3Yw-sS_S1-nYG1dVsE3Ef9OyUQ_4g/exec" 
+        frameborder="0" 
+        style="width:100%; height:1500px; border:none; overflow:hidden;">
+      </iframe>
     </div>
 
     <script>
-      const perksMap = {
-        "ChatGPT": [
-          "Priority access to GPT-4",
-          "Faster response times",
-          "Improved performance during peak hours"
-        ],
-        "Microsoft 365": [
-          "Full access to Word, Excel, PowerPoint",
-          "1TB OneDrive cloud storage",
-          "Outlook email & calendar",
-          "Install on up to 5 devices"
-        ],
-        "Canva Pro": [
-          "Unlimited premium templates & elements",
-          "Magic Resize and Background Remover",
-          "Brand Kit and content planner",
-          "Team collaboration features"
-        ],
-        "Duolingo": [
-          "No ads",
-          "Unlimited hearts (mistakes)",
-          "Personalized practice",
-          "Mastery quizzes and offline access"
-        ],
-        "Assignment Check": [
-          "Basic AI Detection - Basic detection on all major AI Detectors including Turnitin + MVR 15 per extra run",
-          "AI Bypass - Changes for 0% detection + MVR 25 per correction/run",
-          "AI Bypass Plus - All features + unlimited submissions"
-        ],
-        "Perplexity": [
-          "Faster and more accurate answers",
-          "Expanded answer formatting",
-          "Sources and citations in context",
-          "No daily usage limits"
-        ],
-        "Amazon Prime Video": [
-          "Unlimited streaming of movies and series",
-          "Exclusive Prime Originals",
-          "Watch on multiple devices",
-          "Offline downloads"
-        ],
-        "Adobe Creative Cloud": [
-          "Photoshop, Illustrator, Premiere Pro & more",
-          "100GB cloud storage",
-          "Fonts, stock assets, and portfolio tools",
-          "Cross-device app sync"
-        ]
-      };
-
-      function updatePerks() {
-        const service = document.getElementById('service').value;
-        const perks = perksMap[service] || [];
-        const container = document.getElementById('perkDisplay');
-        container.innerHTML = "<strong>What do you get:</strong>";
-        if (perks.length > 0) {
-          const ul = document.createElement("ul");
-          perks.forEach(p => {
-            const li = document.createElement("li");
-            li.textContent = p;
-            ul.appendChild(li);
-          });
-          container.appendChild(ul);
-        }
-      }
-
       document.getElementById('startButton').onclick = () => {
         document.getElementById('landingPage').style.display = 'none';
         document.getElementById('formCard').style.display = 'block';
-        updatePerks();
-      };
-
-      document.getElementById('service').onchange = updatePerks;
-      window.onload = updatePerks;
-
-      document.getElementById('customerForm').onsubmit = async (e) => {
-        e.preventDefault();
-        const formData = new FormData(e.target);
-        const data = Object.fromEntries(formData.entries());
-
-        try {
-          const res = await fetch('https://script.google.com/macros/s/AKfycbwFlP2Z7qeFH0X3smevW5XGODvskl0CibYGissxfbigEy09OwBCjjchiGRU33vp8fZ9tA/exec', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(data)
-          });
-          const result = await res.json();
-          alert('✅ Request submitted successfully!');
-          e.target.reset();
-        } catch (err) {
-          alert('❌ Something went wrong. Please try again later.');
-        }
       };
     </script>
   </body>
