--- a/index.html
+++ b/index.html
@@ -152,123 +152,118 @@
   </div>
 
   <script>
-    function showForm() {
-      document.getElementById('landing').style.display = 'none';
-      document.getElementById('formCard').style.display = 'block';
-    }
+  function showForm() {
+    document.getElementById('landing').style.display = 'none';
+    document.getElementById('formCard').style.display = 'block';
+  }
 
-    const priceMap = {
-      "ChatGPT": { "1 Month": 100, "6 Months": 600, "1 Year": 1200 },
-      "Microsoft 365": { "1 Year": 500 },
-      "Canva Pro": { "1 Year": 150 },
-      "Duolingo": { "1 Year": 150 },
-      "Assignment Check": { "Basic AI Detection": 50, "AI Bypass": 100, "AI Bypass Plus": 300 },
-      "Perplexity": { "1 Year": 200 },
-      "Amazon Prime Video": { "1 Year": 999 },
-      "Adobe Creative Cloud": { "1 Month": 450 }
-    };
+  const priceMap = {
+    "ChatGPT": { "1 Month": 100, "6 Months": 600, "1 Year": 1200 },
+    "Microsoft 365": { "1 Year": 500 },
+    "Canva Pro": { "1 Year": 150 },
+    "Duolingo": { "1 Year": 150 },
+    "Assignment Check": { "Basic AI Detection": 50, "AI Bypass": 100, "AI Bypass Plus": 300 },
+    "Perplexity": { "1 Year": 200 },
+    "Amazon Prime Video": { "1 Year": 999 },
+    "Adobe Creative Cloud": { "1 Month": 450 }
+  };
 
-    const durationOptions = {
-      "ChatGPT": ["1 Month", "6 Months", "1 Year"],
-      "Microsoft 365": ["1 Year"],
-      "Canva Pro": ["1 Year"],
-      "Duolingo": ["1 Year"],
-      "Assignment Check": ["Basic AI Detection", "AI Bypass", "AI Bypass Plus"],
-      "Perplexity": ["1 Year"],
-      "Amazon Prime Video": ["1 Year"],
-      "Adobe Creative Cloud": ["1 Month"]
-    };
+  const durationOptions = {
+    "ChatGPT": ["1 Month", "6 Months", "1 Year"],
+    "Microsoft 365": ["1 Year"],
+    "Canva Pro": ["1 Year"],
+    "Duolingo": ["1 Year"],
+    "Assignment Check": ["Basic AI Detection", "AI Bypass", "AI Bypass Plus"],
+    "Perplexity": ["1 Year"],
+    "Amazon Prime Video": ["1 Year"],
+    "Adobe Creative Cloud": ["1 Month"]
+  };
 
-    const perksMap = {
-      "ChatGPT": ["Priority access to GPT-4", "Faster response times", "Improved performance during peak hours"],
-      "Microsoft 365": ["Access to Word, Excel, PowerPoint", "1TB OneDrive Cloud Storage", "Install on 5 devices"],
-      "Canva Pro": ["Unlimited premium templates & elements", "Magic Resize, Background Remover", "Brand Kit and content planner"],
-      "Duolingo": ["Ad-free experience", "Unlimited hearts (mistakes)", "Offline access"],
-      "Assignment Check": [
-        "AI detection report (Turnitin, GPTZero, etc.)",
-        "No repository saving",
-        "Fast 1–2 hr report"
-      ],
-      "Perplexity": ["Faster and accurate answers", "Cited responses", "No usage limits"],
-      "Amazon Prime Video": ["Exclusive Prime Originals", "Offline downloads", "Watch on multiple devices"],
-      "Adobe Creative Cloud": ["Access to Photoshop, Illustrator & more", "100GB Cloud storage", "Creative asset library"]
-    };
+  const perksMap = {
+    "ChatGPT": ["Priority access to GPT-4", "Faster response times", "Improved performance during peak hours"],
+    "Microsoft 365": ["Access to Word, Excel, PowerPoint", "1TB OneDrive Cloud Storage", "Install on 5 devices"],
+    "Canva Pro": ["Unlimited premium templates & elements", "Magic Resize, Background Remover", "Brand Kit and content planner"],
+    "Duolingo": ["Ad-free experience", "Unlimited hearts (mistakes)", "Offline access"],
+    "Assignment Check": ["AI detection report (Turnitin, GPTZero, etc.)", "No repository saving", "Fast 1–2 hr report"],
+    "Perplexity": ["Faster and accurate answers", "Cited responses", "No usage limits"],
+    "Amazon Prime Video": ["Exclusive Prime Originals", "Offline downloads", "Watch on multiple devices"],
+    "Adobe Creative Cloud": ["Access to Photoshop, Illustrator & more", "100GB Cloud storage", "Creative asset library"]
+  };
 
-    const serviceEl = document.getElementById("service");
-    const durationEl = document.getElementById("duration");
-    const priceDisplay = document.getElementById("priceDisplay").querySelector("span");
-    const perkDisplay = document.getElementById("perkDisplay");
+  const serviceEl = document.getElementById("service");
+  const durationEl = document.getElementById("duration");
+  const priceDisplay = document.getElementById("priceDisplay").querySelector("span");
+  const perkDisplay = document.getElementById("perkDisplay");
 
-    function updateDurationOptions() {
-      const service = serviceEl.value;
-      durationEl.innerHTML = "";
-      (durationOptions[service] || []).forEach(opt => {
-        const o = document.createElement("option");
-        o.value = opt;
-        o.textContent = opt;
-        durationEl.appendChild(o);
-      });
-      updatePerks();
-      updatePrice();
-    }
+  function updateDurationOptions() {
+    const service = serviceEl.value;
+    durationEl.innerHTML = "";
+    (durationOptions[service] || []).forEach(opt => {
+      const o = document.createElement("option");
+      o.value = opt;
+      o.textContent = opt;
+      durationEl.appendChild(o);
+    });
+    updatePerks();
+    updatePrice();
+  }
 
-    function updatePerks() {
-      const service = serviceEl.value;
-      const perks = perksMap[service] || [];
-      if (perks.length > 0) {
-        perkDisplay.innerHTML = "<strong>What do you get:</strong><ul>" + 
-          perks.map(p => `<li>${p}</li>`).join("") + "</ul>";
-      } else {
-        perkDisplay.innerHTML = "";
-      }
-    }
-
-    function updatePrice() {
-      const service = serviceEl.value;
-      const duration = durationEl.value;
-      const price = priceMap[service]?.[duration];
-      if (price !== undefined) {
-        const usd = (price / 15.42).toFixed(2);
-        priceDisplay.textContent = `MVR ${price} ($${usd})`;
-  
-      } else {
-        priceDisplay.textContent = "Unavailable";
-      }
-    }
-
-    serviceEl.onchange = updateDurationOptions;
-    durationEl.onchange = () => {
-      updatePerks();
-      updatePrice();
-    };
-
-    window.onload = updateDurationOptions;
-
-    document.getElementById("customerForm").onsubmit = function(e) {
-  e.preventDefault();
-  const data = Object.fromEntries(new FormData(this).entries());
-
-  fetch("https://script.google.com/macros/s/AKfycbwFlP2Z7qeFH0X3smevW5XGODvskl0CibYGissxfbigEy09OwBCjjchiGRU33vp8fZ9tA/exec", {
-    method: "POST",
-    body: JSON.stringify(data),
-    headers: { "Content-Type": "application/json" }
-  })
-  .then(res => res.json())
-  .then(response => {
-    if (response.status === "success") {
-      alert("✅ Request submitted! Check your email.");
-      this.reset();
+  function updatePerks() {
+    const service = serviceEl.value;
+    const perks = perksMap[service] || [];
+    if (perks.length > 0) {
+      perkDisplay.innerHTML = "<strong>What do you get:</strong><ul>" + 
+        perks.map(p => `<li>${p}</li>`).join("") + "</ul>";
     } else {
-      alert("❌ Submission failed. Try again later.");
+      perkDisplay.innerHTML = "";
     }
-  })
-  .catch(err => {
-    alert("❌ Network error. Please try again.");
-    console.error(err);
-  });
-});
- 
-    };
-  </script>
+  }
+
+  function updatePrice() {
+    const service = serviceEl.value;
+    const duration = durationEl.value;
+    const price = priceMap[service]?.[duration];
+    if (price !== undefined) {
+      const usd = (price / 15.42).toFixed(2);
+      priceDisplay.textContent = `MVR ${price} ($${usd})`;
+    } else {
+      priceDisplay.textContent = "Unavailable";
+    }
+  }
+
+  serviceEl.onchange = updateDurationOptions;
+  durationEl.onchange = () => {
+    updatePerks();
+    updatePrice();
+  };
+
+  window.onload = updateDurationOptions;
+
+  document.getElementById("customerForm").onsubmit = function(e) {
+    e.preventDefault();
+    const data = Object.fromEntries(new FormData(this).entries());
+
+    fetch("https://script.google.com/macros/s/AKfycbwFlP2Z7qeFH0X3smevW5XGODvskl0CibYGissxfbigEy09OwBCjjchiGRU33vp8fZ9tA/exec", {
+      method: "POST",
+      body: JSON.stringify(data),
+      headers: { "Content-Type": "application/json" }
+    })
+    .then(res => res.json())
+    .then(response => {
+      if (response.status === "success") {
+        alert("✅ Request submitted! Check your email.");
+        this.reset();
+        updateDurationOptions(); // Reapply default state
+      } else {
+        alert("❌ Submission failed. Try again later.");
+      }
+    })
+    .catch(err => {
+      alert("❌ Network error. Please try again.");
+      console.error(err);
+    });
+  };
+</script>
+
 </body>
 </html>
