--- a/index.html
+++ b/index.html
@@ -5,268 +5,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MV Digital Tools</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0d1a26;
+    html, body {
       margin: 0;
       padding: 0;
-      color: #fff;
+      height: 100%;
+      background-color: #0d1a26;
+      font-family: 'Segoe UI', sans-serif;
+      overflow: hidden;
     }
 
     .container {
       max-width: 500px;
       margin: 0 auto;
       padding: 30px 20px;
-    }
-
-    .centered {
       text-align: center;
-      padding: 60px 20px 30px;
-      animation: fadeIn 1s ease;
+      color: white;
+      animation: fadeIn 0.8s ease;
     }
 
-    h1, h2 {
+    h2 {
       font-size: 1.8em;
       margin-bottom: 10px;
     }
 
-    button {
+    p {
+      font-size: 1.1em;
+      margin-bottom: 20px;
+    }
+
+    .button {
       padding: 12px 24px;
+      font-size: 16px;
+      font-weight: bold;
       background-color: #e84545;
-      color: #fff;
+      color: white;
       border: none;
       border-radius: 8px;
-      font-weight: bold;
-      font-size: 16px;
       cursor: pointer;
     }
 
-    button:hover {
+    .button:hover {
       background-color: #cc3c3c;
     }
 
-    .card {
-      background: #fff;
-      color: #333;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      margin-top: 30px;
+    .iframe-wrapper {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100dvh; /* fixes mobile cutoff on iOS */
+      width: 100vw;
       display: none;
-      animation: fadeIn 0.5s ease-in-out;
     }
 
-    label {
-      font-weight: bold;
-      margin-top: 12px;
-      display: block;
-    }
-
-    input, select, textarea {
+    iframe {
+      height: 100%;
       width: 100%;
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      margin-top: 6px;
-      margin-bottom: 15px;
-      box-sizing: border-box;
-      font-size: 15px;
-    }
-
-    .perk-section {
-      font-size: 0.95em;
-      margin: 10px 0 20px;
-    }
-
-    .sticky-price {
-      background-color: #0d1a26;
-      color: white;
-      border-radius: 10px;
-      padding: 16px;
-      text-align: center;
-      font-weight: bold;
-      font-size: 18px;
-    }
-
-    .sticky-price span {
-      display: block;
-      font-size: 26px;
-      margin-top: 5px;
+      border: none;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
+      from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div id="landing" class="centered">
-      <h1>Welcome to MV Digital Tools</h1>
-      <p>Are you ready to save up to 90% on Subscription services?</p>
-      <button onclick="showForm()">Yes, show me how</button>
-    </div>
+  <div class="container" id="landingPage">
+    <h2>Welcome to MV Digital Tools</h2>
+    <p>Are you ready to save up tp 90% on Subscription services? 🚀</p>
+    <button class="button" onclick="showIframe()">Let's Get Started</button>
+  </div>
 
-    <div id="formCard" class="card">
-      <h2>📝 Subscription Request</h2>
-      <p style="text-align:center;">Fill the form to subscribe. Payment instructions will be sent instantly.</p>
-      <form id="customerForm">
-        <label>Full Name</label>
-        <input type="text" name="name" required />
-
-        <label>Contact Number</label>
-        <input type="tel" name="contact" required />
-
-        <label>Email Address</label>
-        <input type="email" name="email" required />
-
-        <label>Service</label>
-        <select name="service" id="service" required>
-          <option value="ChatGPT">ChatGPT Pro</option>
-          <option value="Microsoft 365">Microsoft 365</option>
-          <option value="Canva Pro">Canva Pro</option>
-          <option value="Duolingo">Duolingo</option>
-          <option value="Assignment Check">Assignment Check</option>
-          <option value="Perplexity">Perplexity Pro</option>
-          <option value="Amazon Prime Video">Amazon Prime Video</option>
-          <option value="Adobe Creative Cloud">Adobe Creative Cloud</option>
-        </select>
-
-        <label>Duration</label>
-        <select name="duration" id="duration" required></select>
-
-        <div class="perk-section" id="perkDisplay"></div>
-
-        <label>Notes / Ref</label>
-        <textarea name="notes" rows="3" placeholder="Optional..."></textarea>
-
-        <div class="sticky-price" id="priceDisplay">
-          🛒 Total Price
-          <span>MVR 0 ($0.00)</span>
-        </div>
-
-        <button type="submit">Submit</button>
-      </form>
-    </div>
+  <div class="iframe-wrapper" id="iframeWrapper">
+    <iframe
+      id="iframeForm"
+      src="https://script.google.com/macros/s/AKfycbwFlP2Z7qeFH0X3smevW5XGODvskl0CibYGissxfbigEy09OwBCjjchiGRU33vp8fZ9tA/exec"
+      allowfullscreen
+      loading="lazy"
+      referrerpolicy="no-referrer">
+    </iframe>
   </div>
 
   <script>
-    function showForm() {
-      document.getElementById('landing').style.display = 'none';
-      document.getElementById('formCard').style.display = 'block';
+    function showIframe() {
+      document.getElementById("landingPage").style.display = "none";
+      document.getElementById("iframeWrapper").style.display = "block";
     }
-
-    const priceMap = {
-      "ChatGPT": { "1 Month": 100, "6 Months": 600, "1 Year": 1200 },
-      "Microsoft 365": { "1 Year": 500 },
-      "Canva Pro": { "1 Year": 150 },
-      "Duolingo": { "1 Year": 150 },
-      "Assignment Check": { "Basic AI Detection": 50, "AI Bypass": 100, "AI Bypass Plus": 300 },
-      "Perplexity": { "1 Year": 200 },
-      "Amazon Prime Video": { "1 Year": 999 },
-      "Adobe Creative Cloud": { "1 Month": 450 }
-    };
-
-    const durationOptions = {
-      "ChatGPT": ["1 Month", "6 Months", "1 Year"],
-      "Microsoft 365": ["1 Year"],
-      "Canva Pro": ["1 Year"],
-      "Duolingo": ["1 Year"],
-      "Assignment Check": ["Basic AI Detection", "AI Bypass", "AI Bypass Plus"],
-      "Perplexity": ["1 Year"],
-      "Amazon Prime Video": ["1 Year"],
-      "Adobe Creative Cloud": ["1 Month"]
-    };
-
-    const perksMap = {
-      "ChatGPT": ["Priority access to GPT-4", "Faster response times", "Improved performance during peak hours"],
-      "Microsoft 365": ["Access to Word, Excel, PowerPoint", "1TB OneDrive Cloud Storage", "Install on 5 devices"],
-      "Canva Pro": ["Unlimited premium templates & elements", "Magic Resize, Background Remover", "Brand Kit and content planner"],
-      "Duolingo": ["Ad-free experience", "Unlimited hearts (mistakes)", "Offline access"],
-      "Assignment Check": [
-        "AI detection report (Turnitin, GPTZero, etc.)",
-        "No repository saving",
-        "Fast 1–2 hr report"
-      ],
-      "Perplexity": ["Faster and accurate answers", "Cited responses", "No usage limits"],
-      "Amazon Prime Video": ["Exclusive Prime Originals", "Offline downloads", "Watch on multiple devices"],
-      "Adobe Creative Cloud": ["Access to Photoshop, Illustrator & more", "100GB Cloud storage", "Creative asset library"]
-    };
-
-    const serviceEl = document.getElementById("service");
-    const durationEl = document.getElementById("duration");
-    const priceDisplay = document.getElementById("priceDisplay").querySelector("span");
-    const perkDisplay = document.getElementById("perkDisplay");
-
-    function updateDurationOptions() {
-      const service = serviceEl.value;
-      durationEl.innerHTML = "";
-      (durationOptions[service] || []).forEach(opt => {
-        const o = document.createElement("option");
-        o.value = opt;
-        o.textContent = opt;
-        durationEl.appendChild(o);
-      });
-      updatePerks();
-      updatePrice();
-    }
-
-    function updatePerks() {
-      const service = serviceEl.value;
-      const perks = perksMap[service] || [];
-      if (perks.length > 0) {
-        perkDisplay.innerHTML = "<strong>What do you get:</strong><ul>" + 
-          perks.map(p => `<li>${p}</li>`).join("") + "</ul>";
-      } else {
-        perkDisplay.innerHTML = "";
-      }
-    }
-
-    function updatePrice() {
-      const service = serviceEl.value;
-      const duration = durationEl.value;
-      const price = priceMap[service]?.[duration];
-      if (price !== undefined) {
-        const usd = (price / 15.42).toFixed(2);
-        priceDisplay.textContent = `MVR ${price} ($${usd})`;
-      } else {
-        priceDisplay.textContent = "Unavailable";
-      }
-    }
-
-    serviceEl.onchange = updateDurationOptions;
-    durationEl.onchange = () => {
-      updatePerks();
-      updatePrice();
-    };
-
-    window.onload = updateDurationOptions;
-
-    document.getElementById("customerForm").onsubmit = function(e) {
-      e.preventDefault();
-      const data = Object.fromEntries(new FormData(this).entries());
-
-      fetch("https://script.google.com/macros/s/AKfycbwFlP2Z7qeFH0X3smevW5XGODvskl0CibYGissxfbigEy09OwBCjjchiGRU33vp8fZ9tA/exec", {
-        method: "POST",
-        body: JSON.stringify(data),
-        headers: { "Content-Type": "application/json" }
-      })
-      .then(res => res.json())
-      .then(response => {
-        if (response.status === "success") {
-          alert("✅ Request submitted! Check your email.");
-          this.reset();
-          updateDurationOptions();
-        } else {
-          alert("❌ Submission failed. Try again later.");
-        }
-      })
-      .catch(err => {
-        alert("❌ Network error. Please try again.");
-        console.error(err);
-      });
-    };
   </script>
 </body>
 </html>
